--- a/style.css
+++ b/style.css
@@ -377,6 +377,7 @@ figure:hover .play {
 .cover {
     height: 50px;
     width: 50px;
+    cursor: pointer;
 }
 .cover img {
     width: 100%;
@@ -392,6 +393,7 @@ figure:hover .play {
 
 .song-title {
     color: #c1c1c1;
+    cursor: pointer;
 }
 
 .artist {
